GearsetPOC/force-app/main/default/objects/Case/fields/Departure_station__c.field-meta.xml
<CustomField>
    <fullName>Departure_station__c</fullName>
    <label>Departure station</label>
    <length>80</length>
    <type>Text</type>
</CustomField>