GearsetPOC/force-app/main/default/objects/Case/fields/Departure_Station_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Departure_Station_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Departure Station</label>
    <type>Checkbox</type>
</CustomField>