GearsetPOC/force-app/main/default/objects/Case/fields/Departure_station_outbound__c.field-meta.xml
<CustomField>
    <fullName>Departure_station_outbound__c</fullName>
    <label>Departure station outbound</label>
    <length>45</length>
    <type>Text</type>
</CustomField>