GearsetPOC/force-app/main/default/objects/Case/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <label>Departure Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>05:00 - 07:00</fullName>
            </value>
            <value>
                <fullName>07:00 - 09:00</fullName>
            </value>
            <value>
                <fullName>09:00 - 11:00</fullName>
            </value>
            <value>
                <fullName>11:00 - 13:00</fullName>
            </value>
            <value>
                <fullName>13:00 - 15:00</fullName>
            </value>
            <value>
                <fullName>15:00 - 17:00</fullName>
            </value>
            <value>
                <fullName>17:00 - 19:00</fullName>
            </value>
            <value>
                <fullName>19:00 - 21:00</fullName>
            </value>
            <value>
                <fullName>21:00 - 23:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>