GearsetPOC/force-app/main/default/objects/Case/fields/Departure_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_Out__c</fullName>
    <description>Departure Time of the Outward Journey</description>
    <inlineHelpText>Departure Time of the Outward Journey</inlineHelpText>
    <label>Departure Time (Outward)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>