GearsetPOC/force-app/main/default/objects/Case/fields/Departure_Time_Ret__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_Ret__c</fullName>
    <description>Departure Time of the Return Journey</description>
    <inlineHelpText>Departure Time of the Return Journey</inlineHelpText>
    <label>Departure Time (Return)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>