GearsetPOC/force-app/main/default/objects/Case/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <description>Amount of the Deposit</description>
    <inlineHelpText>Amount of the Deposit</inlineHelpText>
    <label>Deposit Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>