GearsetPOC/force-app/main/default/objects/Case/fields/Deposit_Date_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Date_Limit__c</fullName>
    <description>Limit Date of the Deposit</description>
    <inlineHelpText>Limit Date of the Deposit</inlineHelpText>
    <label>Deposit Date Limit</label>
    <type>Date</type>
</CustomField>