GearsetPOC/force-app/main/default/objects/Case/fields/Destination_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Destination_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Lookup</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Cases (Destination_Lookup)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>