GearsetPOC/force-app/main/default/objects/Case/fields/Destination_station_outbound__c.field-meta.xml
<CustomField>
    <fullName>Destination_station_outbound__c</fullName>
    <label>Destination station outbound</label>
    <length>45</length>
    <type>Text</type>
</CustomField>