GearsetPOC/force-app/main/default/objects/Case/fields/Direction_requested__c.field-meta.xml
<CustomField>
    <fullName>Direction_requested__c</fullName>
    <label>Direction (requested)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>