GearsetPOC/force-app/main/default/objects/Case/fields/Disruption_Contact__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Contact__c</fullName>
    <formula>IF(AND( 
ISPICKVAL(Initial_Reason_For_Contact__c, &quot;Disruption or Compensation&quot;), 
NOT(ISBLANK(TEXT(Travel_Based_Disruption__c)))), 
TEXT( Travel_Based_Disruption__c ), 
IF(AND( 
ISPICKVAL(Initial_Reason_For_Contact__c, &quot;Disruption or Compensation&quot;), 
NOT(ISBLANK(TEXT( Alternative_Disruption__c )))), 
TEXT( Alternative_Disruption__c ),NULL 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disruption Contact</label>
    <type>Text</type>
</CustomField>