GearsetPOC/force-app/main/default/objects/Case/fields/Disruption_Description__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Description__c</fullName>
    <label>Disruption Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change request</fullName>
            </value>
            <value>
                <fullName>Refund request</fullName>
            </value>
            <value>
                <fullName>Сhange request</fullName>
                <isActive>false</isActive>
                <label>Сhange request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>