GearsetPOC/force-app/main/default/objects/Case/fields/Disruption_Phone__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Phone__c</fullName>
    <inlineHelpText>Phone on which the customer can be contacted during the disruption</inlineHelpText>
    <label>Disruption Phone</label>
    <type>Phone</type>
</CustomField>