GearsetPOC/force-app/main/default/objects/Case/fields/Disruption_Preference__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Preference regarding the disruption</inlineHelpText>
    <label>Disruption Preference</label>
    <referenceTo>Disruption_Help_Preference__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>