GearsetPOC/force-app/main/default/objects/Case/fields/Disruption_Priority__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Priority__c</fullName>
    <description>Look at the Priority of the disruption preference, multiply it by 100 000 000 and add the number of the case. 
Then you have a number that we will use to filter data:
If you filter asc, you will get first cases related to the Number 1 priority (by order of creation date, thanks to the case number), then all cases related to the Number 2 priority (by order of  date), etc...</description>
    <formula>Disruption_Preference__r.Priority__c  * 100000000 +   VALUE(CaseNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disruption Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>