GearsetPOC/force-app/main/default/objects/Case/fields/Disruptions_Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Disruptions_Last_6_Months__c</fullName>
    <label>#Disruptions last 6 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>