GearsetPOC/force-app/main/default/objects/Case/fields/DLT_Origin__c.field-meta.xml
<CustomField>
    <fullName>DLT_Origin__c</fullName>
    <label>Journey Origin (Web)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>