GearsetPOC/force-app/main/default/objects/Case/fields/Do_Not_Update_From_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_From_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Update From Call</label>
    <type>Checkbox</type>
</CustomField>