GearsetPOC/force-app/main/default/objects/Case/fields/Draft_Manual_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Draft_Manual_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Manual Compensation</label>
    <type>Checkbox</type>
</CustomField>