GearsetPOC/force-app/main/default/objects/Case/fields/Drop_Email_Outward__c.field-meta.xml
<CustomField>
    <fullName>Drop_Email_Outward__c</fullName>
    <description>Drop off person email id</description>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>