GearsetPOC/force-app/main/default/objects/Case/fields/Drop_Email_Return__c.field-meta.xml
<CustomField>
    <fullName>Drop_Email_Return__c</fullName>
    <description>Drop perosn mail id- Return</description>
    <label>Email</label>
    <length>60</length>
    <type>Text</type>
</CustomField>