GearsetPOC/force-app/main/default/objects/Case/fields/Drop_Fname_Outward__c.field-meta.xml
<CustomField>
    <fullName>Drop_Fname_Outward__c</fullName>
    <description>First name of drop off person at departure station</description>
    <label>First Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>