GearsetPOC/force-app/main/default/objects/Case/fields/Drop_Lname_Outward__c.field-meta.xml
<CustomField>
    <fullName>Drop_Lname_Outward__c</fullName>
    <description>Last name of person at frop off station at departure</description>
    <label>Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>