GearsetPOC/force-app/main/default/objects/Case/fields/Drop_Lname_Return__c.field-meta.xml
<CustomField>
    <fullName>Drop_Lname_Return__c</fullName>
    <description>Drop perosn last name- Return Journey</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>