GearsetPOC/force-app/main/default/objects/Case/fields/Drop_Phno_Outward__c.field-meta.xml
<CustomField>
    <fullName>Drop_Phno_Outward__c</fullName>
    <label>Contact Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>