GearsetPOC/force-app/main/default/objects/Case/fields/Drop_Phno_Return__c.field-meta.xml
<CustomField>
    <fullName>Drop_Phno_Return__c</fullName>
    <description>Drop person phno- Return Journey</description>
    <label>Contact Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>