GearsetPOC/force-app/main/default/objects/Case/fields/Duty_Manager_Shift_Leader_arrival__c.field-meta.xml
<CustomField>
    <fullName>Duty_Manager_Shift_Leader_arrival__c</fullName>
    <label>Duty Manager/Shift Leader (arrival)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>