GearsetPOC/force-app/main/default/objects/Case/fields/E4A_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>E4A_Customer_Type__c</fullName>
    <label>E4A Customer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>Travel Management Company</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Distributors (Train operating company)</fullName>
            </value>
            <value>
                <fullName>Online Travel Agencies (OTA)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>