GearsetPOC/force-app/main/default/objects/Case/fields/E4A_Opt_Out_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>E4A_Opt_Out_Other_Reason__c</fullName>
    <label>E4A Opt Out Other Reason</label>
    <type>TextArea</type>
</CustomField>