GearsetPOC/force-app/main/default/objects/Case/fields/EBSC_Approved__c.field-meta.xml
<CustomField>
    <fullName>EBSC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBSC Approved</label>
    <type>Checkbox</type>
</CustomField>