GearsetPOC/force-app/main/default/objects/Case/fields/EFT_App_SLA__c.field-meta.xml
<CustomField>
    <fullName>EFT_App_SLA__c</fullName>
    <formula>IF (ISPICKVAL(Status,&quot;Closed&quot;),&quot;Closed&quot;, 
IF (Days_Since_Last_Contact__c &lt;= 13,&quot;Within SLA&quot;, 
IF (CONTAINS(TEXT(Days_Since_Last_Contact__c), &quot;14&quot;),&quot;Approaching SLA&quot;,&quot;Out of SLA&quot;) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EFT App SLA</label>
    <type>Text</type>
</CustomField>