GearsetPOC/force-app/main/default/objects/Case/fields/Einstein_Master_Label__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Master_Label__c</fullName>
    <label>Einstein Master Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>