GearsetPOC/force-app/main/default/objects/Case/fields/Einstein_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Template_Id__c</fullName>
    <label>Einstein Template Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>