GearsetPOC/force-app/main/default/objects/Case/fields/Email_Sent_to_Customer_on_17th_September__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_to_Customer_on_17th_September__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent to Customer on 17th September</label>
    <type>Checkbox</type>
</CustomField>