GearsetPOC/force-app/main/default/objects/Case/fields/Email_validated__c.field-meta.xml
<CustomField>
    <fullName>Email_validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email validated</label>
    <type>Checkbox</type>
</CustomField>