GearsetPOC/force-app/main/default/objects/Case/fields/Erase_Personal_Data__c.field-meta.xml
<CustomField>
    <fullName>Erase_Personal_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erase Personal Data</label>
    <type>Checkbox</type>
</CustomField>