GearsetPOC/force-app/main/default/objects/Case/fields/Error_Message_Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_Incident_Number__c</fullName>
    <inlineHelpText>You can find the Incident Number on the incident log, if this isn&#39;t known then please ask the customer for the error message they received and enter that instead.</inlineHelpText>
    <label>Error Message / Incident Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>