GearsetPOC/force-app/main/default/objects/Case/fields/Escape_validation_during_GDPR_deletion__c.field-meta.xml
<CustomField>
    <fullName>Escape_validation_during_GDPR_deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will ignore the validation rule - LOG_Customer_Profile_Must_Be_Linked</description>
    <label>Escape validation during GDPR deletion</label>
    <type>Checkbox</type>
</CustomField>