GearsetPOC/force-app/main/default/objects/Case/fields/Exchange_Amount__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Amount__c</fullName>
    <label>Exchange Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>