GearsetPOC/force-app/main/default/objects/Case/fields/Exchange_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Fee__c</fullName>
    <label>Exchange Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>