GearsetPOC/force-app/main/default/objects/Case/fields/Exchanged_Points_SLA__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Points_SLA__c</fullName>
    <formula>IF (ISPICKVAL(Status,&quot;Closed&quot;),&quot;Closed&quot;, 
IF (Days_Since_Last_Contact__c &lt;= 8,&quot;Within SLA&quot;, 
IF (CONTAINS(TEXT(Days_Since_Last_Contact__c), &quot;9&quot;),&quot;Approaching SLA&quot;,&quot;Out of SLA&quot;) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchanged Points SLA</label>
    <type>Text</type>
</CustomField>