GearsetPOC/force-app/main/default/objects/Case/fields/Exclude_Delete__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude/Delete</label>
    <type>Checkbox</type>
</CustomField>