GearsetPOC/force-app/main/default/objects/Case/fields/Expected_outcome__c.field-meta.xml
<CustomField>
    <fullName>Expected_outcome__c</fullName>
    <description>What would be the expected outcome?</description>
    <label>Expected outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>