GearsetPOC/force-app/main/default/objects/Case/fields/Extra_costs__c.field-meta.xml
<CustomField>
    <fullName>Extra_costs__c</fullName>
    <description>To support Migration</description>
    <label>Extra costs (hotel, taxi,...)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>