GearsetPOC/force-app/main/default/objects/Case/fields/Fare_Difference_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fare_Difference_Amount__c</fullName>
    <label>Fare Difference Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>