GearsetPOC/force-app/main/default/objects/Case/fields/FCR_Last_Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_Last_Case_Closed_Date__c</fullName>
    <defaultValue>Today() - 2400</defaultValue>
    <label>FCR Last Case Closed Date</label>
    <type>Date</type>
</CustomField>