GearsetPOC/force-app/main/default/objects/Case/fields/FCR_Last_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>FCR_Last_Case_Number__c</fullName>
    <defaultValue>&quot;0000&quot;</defaultValue>
    <label>FCR Last Case Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>