GearsetPOC/force-app/main/default/objects/Case/fields/FCR_Multiple_Contact__c.field-meta.xml
<CustomField>
    <fullName>FCR_Multiple_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is ticked if FCR failed.</description>
    <label>FCR Multiple Contact</label>
    <type>Checkbox</type>
</CustomField>