GearsetPOC/force-app/main/default/objects/Case/fields/FCR_Number_Of_Days_Between_Last_Case__c.field-meta.xml
<CustomField>
    <fullName>FCR_Number_Of_Days_Between_Last_Case__c</fullName>
    <formula>IF(ISNULL(FCR_Last_Case_Closed_Date__c),0, Date_Closed__c - FCR_Last_Case_Closed_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Number Of Days Between Last Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>