GearsetPOC/force-app/main/default/objects/Case/fields/Files_Ids_System__c.field-meta.xml
<CustomField>
    <fullName>Files_Ids_System__c</fullName>
    <label>Files Ids System</label>
    <length>200</length>
    <type>Text</type>
</CustomField>