GearsetPOC/force-app/main/default/objects/Case/fields/Final_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Balance_Amount__c</fullName>
    <description>The Final Balance Amount is what remains to be paid after the deposit has been paid</description>
    <formula>Price__c -  Deposit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Final Balance Amount is what remains to be paid after the deposit has been paid</inlineHelpText>
    <label>Final Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>