GearsetPOC/force-app/main/default/objects/Case/fields/Final_Balance_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Balance_Date__c</fullName>
    <description>Final Balance Due Date of the Group Booking</description>
    <inlineHelpText>Final Balance Due Date of the Group Booking</inlineHelpText>
    <label>Final Balance Due Date</label>
    <type>Date</type>
</CustomField>