GearsetPOC/force-app/main/default/objects/Case/fields/Fixed_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee_Amount__c</fullName>
    <label>Fixed Fee Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>