GearsetPOC/force-app/main/default/objects/Case/fields/Flagged_By__c.field-meta.xml
<CustomField>
    <fullName>Flagged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flagged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>