GearsetPOC/force-app/main/default/objects/Case/fields/Foreign_Booking__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreign Booking</label>
    <type>Checkbox</type>
</CustomField>