GearsetPOC/force-app/main/default/objects/Case/fields/From_Connecting_Station_Out_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Connecting_Station_Out_Full_Name__c</fullName>
    <label>From (Connecting Station  Out) Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>