GearsetPOC/force-app/main/default/objects/Case/fields/From_Connecting_Station_Outward__c.field-meta.xml
<CustomField>
    <fullName>From_Connecting_Station_Outward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From (Connecting Station - Outward)</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Cases (From (Connecting Station - Outward))</relationshipLabel>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>