GearsetPOC/force-app/main/default/objects/Case/fields/From_Intercaps_Station_Ret_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Intercaps_Station_Ret_Full_Name__c</fullName>
    <label>From (Intercaps Station - Ret) Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>