GearsetPOC/force-app/main/default/objects/Case/fields/From_Intercaps_Station_Return__c.field-meta.xml
<CustomField>
    <fullName>From_Intercaps_Station_Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From (Intercaps Station - Return)</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Cases (From (Connecting Station - Return))</relationshipLabel>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>