GearsetPOC/force-app/main/default/objects/Case/fields/From_Outward_Journey__c.field-meta.xml
<CustomField>
    <fullName>From_Outward_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Departure Station of the Outward Journey</description>
    <inlineHelpText>Departure Station of the Outward Journey</inlineHelpText>
    <label>From (Outward Journey)</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>