GearsetPOC/force-app/main/default/objects/Case/fields/From_Return_Journey__c.field-meta.xml
<CustomField>
    <fullName>From_Return_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Departure Station of the Return  Journey</description>
    <inlineHelpText>Departure Station of the Return  Journey</inlineHelpText>
    <label>From (Return Journey)</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Cases (From (Return Journey))</relationshipLabel>
    <relationshipName>Case1</relationshipName>
    <type>Lookup</type>
</CustomField>