GearsetPOC/force-app/main/default/objects/Case/fields/GDS_BSP_Auth_SLA__c.field-meta.xml
<CustomField>
    <fullName>GDS_BSP_Auth_SLA__c</fullName>
    <formula>IF (ISPICKVAL(Status,&quot;Closed&quot;),&quot;Closed&quot;, 
IF (Days_Since_Last_Contact__c &lt;= 58,&quot;Within SLA&quot;, 
IF (CONTAINS(TEXT(Days_Since_Last_Contact__c), &quot;59&quot;),&quot;Approaching SLA&quot;,&quot;Out of SLA&quot;) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDS (BSP Auth) SLA</label>
    <type>Text</type>
</CustomField>