GearsetPOC/force-app/main/default/objects/Case/fields/GDS_Locator__c.field-meta.xml
<CustomField>
    <fullName>GDS_Locator__c</fullName>
    <label>GDS Locator</label>
    <type>TextArea</type>
</CustomField>