GearsetPOC/force-app/main/default/objects/Case/fields/GDS_TCN_ACM__c.field-meta.xml
<CustomField>
    <fullName>GDS_TCN_ACM__c</fullName>
    <label>GDS Ticket Number</label>
    <type>TextArea</type>
</CustomField>