GearsetPOC/force-app/main/default/objects/Case/fields/Goodwill_Points__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Points__c</fullName>
    <label>Goodwill Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>