GearsetPOC/force-app/main/default/objects/Case/fields/Group_Booking_Country__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Country__c</fullName>
    <label>Group Booking Country</label>
    <length>18</length>
    <type>Text</type>
</CustomField>