GearsetPOC/force-app/main/default/objects/Case/fields/Group_Booking_Deposit_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Deposit_Paid_Date__c</fullName>
    <description>Date when the Deposit amount regarding the group booking has been paid</description>
    <inlineHelpText>Date when the Deposit amount regarding the group booking has been paid</inlineHelpText>
    <label>Deposit Paid Date</label>
    <type>Date</type>
</CustomField>