GearsetPOC/force-app/main/default/objects/Case/fields/Group_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Status__c</fullName>
    <description>Status of the Group Booking</description>
    <inlineHelpText>Status of the Group Booking</inlineHelpText>
    <label>Group Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <color>#0B6FCE</color>
                <label>Quote</label>
            </value>
            <value>
                <fullName>Future Pre-registered</fullName>
            </value>
            <value>
                <fullName>Advised Dates Open</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
                <color>#E27001</color>
                <label>Provisional</label>
            </value>
            <value>
                <fullName>Paid</fullName>
                <color>#006600</color>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Deposit taken</fullName>
                <color>#CC33CC</color>
                <label>Deposit taken</label>
            </value>
            <value>
                <fullName>Reinstated</fullName>
            </value>
            <value>
                <fullName>Cancelled - Non Payment</fullName>
            </value>
            <value>
                <fullName>Cancelled - No Longer Travelling</fullName>
            </value>
            <value>
                <fullName>Cancelled - Too Expensive</fullName>
            </value>
            <value>
                <fullName>Cancelled - Low Take Up</fullName>
            </value>
            <value>
                <fullName>Cancelled - Alternative Travel Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled - Terror Alert</fullName>
            </value>
            <value>
                <fullName>Cancelled - Other</fullName>
                <color>#660000</color>
                <label>Cancelled - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>