GearsetPOC/force-app/main/default/objects/Case/fields/Group_Booking_Ticketing_Option__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Ticketing_Option__c</fullName>
    <description>Ticketing option of the Group Booking
Mainly used for reporting purpose</description>
    <inlineHelpText>Ticketing option of the Group Booking

Mainly used for reporting purpose</inlineHelpText>
    <label>Ticketing Option (Depreciate)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Post,</fullName>
            </value>
            <value>
                <fullName>TOD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>