GearsetPOC/force-app/main/default/objects/Case/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Name of the Group for the Group Booking</description>
    <inlineHelpText>Name of the Group for the Group Booking</inlineHelpText>
    <label>Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>