GearsetPOC/force-app/main/default/objects/Case/fields/Group_Organiser__c.field-meta.xml
<CustomField>
    <fullName>Group_Organiser__c</fullName>
    <description>Name of the Group Organiser</description>
    <inlineHelpText>Name of the Group Organiser</inlineHelpText>
    <label>Group Organiser</label>
    <length>80</length>
    <type>Text</type>
</CustomField>